--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: BTCR
 Type: Package
 Title: Simple Stats and Plots for BCR and TCR
-Version: 0.1.0
+Version: 0.1.1
 Date: 2020-11-17
 Author: xizhihui
 Maintainer: xizhihui<zhihui_xi@qq.com>
@@ -11,6 +11,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Depends:
+  R (>= 3.5.0),
   Seurat,
   ggplot2
 Imports:
@@ -19,3 +20,7 @@ Imports:
   ggplotify,
   scales,
   patchwork
+Collate:
+  "data.R"
+  "preprocess.R"
+  "visualization.R"
